--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ requires      = ["setuptools>=61.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "imap-box"
+name = "imap-easybox"
 version = "0.1.0"
 description = "Easier use of imap mailboxes based on imaplib"
 readme = "README.md"
